# aurora-archived

./: .atom-build.yml  .gcc-flags.json  .gitattributes  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Installation.md  LICENSE  Makefile  Makefile.am  Makefile.in  README.md  aurora.sln  config.h.in  config.h.in~  configure  configure.ac
docs/: Aurora.uml  CNAME  GUI.md  README.md  Shell.md  TODOGuide.md
docs/Core/LaTeX/: documentation.tex  getting_started.tex  main.tex  refman.tex  title.tex  tutorials.tex
docs/Core/RTF/: refman.rtf
docs/Core/UML/: Framework.uml  Modules.uml
docs/GTK+/: example.md  getting_started.md
docs/Info/: OS.md  RAM.md  Targets.md
docs/Lib/: Convertion.md  Target.md
docs/Wiki/: index.html
ide/vs/: aurora-framework.sln
include/Aurora/: Application.h  Aurora.h  Common.h  GEngine.h  GUIApplication.h  GUIEvent.h  GUILabel.h  GUIWindow.h  InfoRAM.h  Macros.h  ShellColor.h  ShellLog.h  Typedef.h
include/Aurora/CLI/: Color.h  Log.h  Output.h
include/Aurora/Core/: Application.h  Aurora.h  Debug.h  Target.h  Targets.h  Typedef.h
include/Aurora/Crypto/: AES.h
include/Aurora/GEngine/: API.h  Application.h  Direct3D.h  GLFW.h  Input.h  OpenGL.h  Vulkan.h  Window.h
include/Aurora/GEngine/GL/: Window.h
include/Aurora/GL/: Window.h
include/Aurora/GUI/: Application.h  Button.h  Label.h  Layout.h  Style.h  Window.h
include/Aurora/Hash/: MD5.h
include/Aurora/IO/: File.h  Timer.h
include/Aurora/Info/: OS.h  RAM.h
include/Aurora/Lib/: Aurora.h  Endian.h  IOStream.h  Input.h  Output.h  String.h  Target.h  Type.h
include/Aurora/Math/: 2DVector.h  3DVector.h  4DVector.h  Utils.h  Vector2D.h  Vector3D.h  Vector4D.h
include/Aurora/Parse/: Math.h
include/Aurora/Shell/: Color.h  ColorType.h  Info.h  Input.h  Input.hpp  Log.h  Log.hpp  Output.h  Output.hpp  TextStyle.h
include/Aurora/TLib/: CircularShift.h  Endian.h  IOStream.h  Limits.h  Memory.h  String.h  Target.h  Type.h
src/: aurora_framework.vcxproj  aurora_framework.vcxproj.filters
src/Aurora/: Application.cpp  Macros.cpp
src/Binaries/: aurora_binaries.vcxproj
src/Core/: Application.cpp  Debug.cpp  Macros.cpp
src/Crypto/: AES.cpp
src/Examples/: BUILD.md  aurora_tests.vcxproj  aurora_tests.vcxproj.filters  test  test.cpp
src/Examples/src/: test_crypto.cpp  test_gui.cpp  test_shell.cpp  test_string.cpp
src/GEngine/: Window.cpp
src/GUI/: Application.cpp  Event.cpp  Events.cpp  Label.cpp  Window.cpp
src/Info/: OS.cpp  RAM.cpp
src/Lib/: CircularShift.cpp  String.c  String.cpp  String2.c
src/Shell/: Color.cpp  Input.cpp  Log.cpp  Output.cpp
src/aurora-ai/.ide/vs/: aurora-ai.cproj  aurora-ai.md.pc
src/aurora-cli/: Color.cpp
src/aurora-cli-core/: Color.cpp  Input.cpp  Output.cpp
src/aurora-cli/.ide/vs/: aurora-cli.cproj
src/aurora-core/: Application.cpp  Debug.cpp
src/aurora-core-tlib/: CircularShift.cpp  Endian.cpp  IOStream.cpp  Memory.c  String.cpp
src/aurora-core-tlib/.ide/vs/: aurora-core-tlib.cproj  aurora-core-tlib.md.pc
src/aurora-core/.ide/vs/: aurora-core.cproj  aurora-core.md.pc
src/aurora-crypto/: AES.cpp  MD5.cpp
src/aurora-examples/: BUILD.md  test_gengine.cpp  test_gui.cpp  test_string.cpp
src/aurora-examples/src/: test_gui.cpp
src/aurora-gengine-core/: Application.cpp  Input.cpp  Window.cpp
src/aurora-gengine-opengl/: OpenGL.cpp
src/aurora-gui/: Application.cpp  Button.cpp  Label.cpp  Style.cpp  Window.cpp
src/aurora-io/: InfoOS.cpp  InfoRAM.cpp  Memory.c  Timer.cpp
src/aurora-math/: 2DVector.cpp  3DVector.cpp  4DVector.cpp  Vector2D.cpp  Vector3D.cpp  Vector4D.cpp
src/aurora-math-parser/: Math.cpp
